[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ChromeDriver"
version = "1.0.1"
authors = [
  {name = "Elias Alstead", email = "elias.alstead@gmail.com"},
]
description = "Class to simplify Chrome automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["selenium", "undetected-chromedriver"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
